<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent" android:background="#D3B088">

    <TextView
            android:text="@string/reminderText"
            android:layout_width="71dp"
            android:layout_height="35dp"
            android:id="@+id/reminderName" android:gravity="center"
            android:textColor="@android:color/black" android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/sunday" app:layout_constraintBottom_toTopOf="@+id/sunday"
            app:layout_constraintTop_toTopOf="@+id/sunday" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp" android:layout_marginStart="16dp" android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"/>
    <TextView
            android:text="@string/monday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/monday" android:gravity="center"
            app:layout_constraintBaseline_toBaselineOf="@+id/tuesday" app:layout_constraintStart_toEndOf="@+id/sunday"
            app:layout_constraintEnd_toStartOf="@+id/tuesday" android:layout_marginEnd="12dp"
            android:layout_marginRight="12dp" android:textColor="@color/daysOfTheWeekOff"/>
    <TextView
            android:text="@string/Sunday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sunday" android:gravity="center"
            app:layout_constraintBaseline_toBaselineOf="@+id/monday"
            app:layout_constraintStart_toEndOf="@+id/reminderName" app:layout_constraintEnd_toStartOf="@+id/monday"
            android:layout_marginEnd="16dp" android:layout_marginRight="16dp"
            android:textColor="@color/daysOfTheWeekOff"/>
    <TextView
            android:text="@string/tuesday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tuesday" android:gravity="center"
            app:layout_constraintStart_toEndOf="@+id/monday" app:layout_constraintEnd_toStartOf="@+id/wednesday"
            app:layout_constraintTop_toTopOf="@+id/friday" app:layout_constraintBottom_toBottomOf="@+id/friday"
            android:layout_marginEnd="14dp" android:layout_marginRight="14dp"
            android:textColor="@color/daysOfTheWeekOff"/>
    <TextView
            android:text="@string/wednesday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/wednesday" android:gravity="center"
            app:layout_constraintBaseline_toBaselineOf="@+id/tuesday" app:layout_constraintStart_toEndOf="@+id/tuesday"
            app:layout_constraintEnd_toStartOf="@+id/thursday" android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp" android:textColor="@color/daysOfTheWeekOff"/>
    <TextView
            android:text="@string/thursday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/thursday" android:gravity="center"
            app:layout_constraintBaseline_toBaselineOf="@+id/wednesday"
            app:layout_constraintStart_toEndOf="@+id/wednesday" app:layout_constraintEnd_toStartOf="@+id/friday"
            android:layout_marginEnd="15dp" android:layout_marginRight="15dp"
            android:textColor="@color/daysOfTheWeekOff"/>
    <TextView
            android:text="@string/Friday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/friday" android:gravity="center"
            app:layout_constraintBaseline_toBaselineOf="@+id/saturday"
            app:layout_constraintStart_toEndOf="@+id/thursday" app:layout_constraintEnd_toStartOf="@+id/saturday"
            android:layout_marginEnd="14dp" android:layout_marginRight="14dp"
            android:textColor="@color/daysOfTheWeekOff"/>
    <TextView
            android:text="@string/Saturday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/saturday" android:gravity="center"
            app:layout_constraintStart_toEndOf="@+id/friday" app:layout_constraintEnd_toStartOf="@+id/toggleSwitch"
            app:layout_constraintTop_toTopOf="@+id/toggleSwitch"
            app:layout_constraintBottom_toBottomOf="@+id/toggleSwitch"
            android:layout_marginEnd="22dp" android:layout_marginRight="22dp"
            android:textColor="@color/daysOfTheWeekOff"/>


    <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/toggleSwitch" android:layout_marginTop="25dp"
            android:theme="@style/SwitchTheme"
            app:layout_constraintStart_toEndOf="@+id/saturday" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginEnd="6dp" android:layout_marginRight="6dp"/>


</android.support.constraint.ConstraintLayout>